форма Добавление работы. форма Авторизации. Соответствующие обработчики.

--- a/templates/register.html
+++ b/templates/register.html
@@ -68,9 +68,9 @@
         {% endfor %}
     </p>
     <p>
-        {{ form.spciality.label }}<br>
-        {{ form.spciality(class="form-control") }}<br>
-        {% for error in form.spciality.errors %}
+        {{ form.speciality.label }}<br>
+        {{ form.speciality(class="form-control") }}<br>
+        {% for error in form.speciality.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
             </p>
