--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,20 @@
 <body>
 <header>
     <nav class="navbar navbar-light bg-light">
+         <p align="center">
+            <h1>Миссия колонизации марса</h1>
+        </p>
+        {% if current_user.is_authenticated %}
+        <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
+        {% else %}
+        <p>
+            <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
+            <a class="btn btn-success" href="/login">Войти</a>
+        </p>
+        {% endif %}
+
     </nav>
+
 </header>
 
 <main role="main" class="container">
