--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
+<br>
+<a class="btn btn-primary" href="/add_job">Добавить работу</a>
 {% for job in jobs %}
 <h2>Работа #{{job.id}}</h2>
 <table>
