--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,9 @@
 
 {% block content %}
 <br>
-<a class="btn btn-primary" href="/add_job">Добавить работу</a>
+{% if current_user.is_authenticated %}
+    <a href="news" class="btn btn-secondary">Добавить работу</a>
+{% endif %}
 {% for job in jobs %}
 <h2>Работа #{{job.id}}</h2>
 <table>
